--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,40 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Regal</title>
+<html>
+  <head>
+    <title>{{ page.title }}</title>
+    
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+  
+  </head>
 
 
-    <!-- Library CSS -->
-    <link href="css/regal_library.css" rel="stylesheet">
+  <body>
+    <nav>
+<ul>
+<li><a href="/">Home</a></li>
+<li><a href="/about">About</a></li>
+<li><a href="/cv">CV</a></li>
+<li><a href="/blog">Blog</a></li>
+</ul>
+    </nav>
+<div class="container">
 
-    <!-- Icons CSS -->
-    <link href="fonts/themify-icons.css" rel="stylesheet">
-    <link href="fonts/hotel/flaticon.css" rel="stylesheet">
+  {{ content }}
 
-    <!-- Theme CSS -->
-    <link href="css/regal_style.css" rel="stylesheet">
+</div>
+  
+  <footer>
+   <ul>
+   <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+   <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+   </ul>
+  </footer>
+  </body>
 
-    <!-- Google Fonts -->
-    <!-- <link href='https://fonts.googleapis.com/css?family=Raleway:400,100,300,500,700,900' rel='stylesheet' type='text/css'> -->
-</head>
-
-<body>
-
-{{ content }}
-
-<!-- Page End -->
-
-
-
-<!-- JQuery -->
-<script src="js/jquery-1.12.4.min.js"></script>
-<!-- Library JS -->
-<script src="js/regal_library.js"></script>
-<!-- Theme JS -->
-<script src="js/regal_script.js"></script>
-
-
-</body>
 </html>
