--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -5,7 +5,7 @@
     <!-- Slider Texts -->
     <div class="reg_slide_txt reg_slide_center_middle text-center"  data-0="opacity:1;" data--400-bottom="opacity:0;">
 
-        <div class="reg_slide_title">Regal.</div>
+        <div class="reg_slide_title">{{ site.data.params.name }}</div>
         <div class="reg_slide_subtitle">Our hostel is located in the capital’s hippest and trendiest district.</div>
 
     </div>
