--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ site.params.name }}</title>
+    <title>{{ site.data.params.name }}</title>
 
 
     <!-- Library CSS -->
