--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -3,7 +3,7 @@
     <div class="reg_menu_btn">
         <span></span><span></span><span></span>
     </div>
-    <b>Regal.</b>
+    <b>{{site.data.params.name}}</b>
 </div>
 <!-- Menu Btn End-->
 
