--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -29,6 +29,7 @@
                     <span>{{ item.title }}</span>
                 </a>
             </li>
+            {% endfor %}
         </ul>
 
         <!-- Social Btns -->
