--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -23,7 +23,7 @@
                 <span></span><span></span>
             </div>{{ site.data.menu.name }}.</div>
         <ul>
-            {% for item in site.data.menuitems %}
+            {% for item in site.data.menu.items %}
             <li>
                 <a href="{{ item.link }}">
                     <span>{{ item.title }}</span>
