--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -3,7 +3,7 @@
     <div class="reg_menu_btn">
         <span></span><span></span><span></span>
     </div>
-    <b>{{ site.data.menu.name }}.</b>
+    <b>{{ site.data.menu.name }}</b>
 </div>
 <!-- Menu Btn End-->
 
@@ -21,7 +21,7 @@
         <div class="reg_menu_cont_logo">
             <div class="reg_menu_cont_logo_close">
                 <span></span><span></span>
-            </div>{{ site.data.menu.name }}.</div>
+            </div>{{ site.data.menu.name }}</div>
         <ul>
             {% for item in site.data.menu.items %}
             <li>
