--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -6,7 +6,7 @@
     <div class="reg_slide_txt reg_slide_center_middle text-center"  data-0="opacity:1;" data--400-bottom="opacity:0;">
 
         <div class="reg_slide_title">{{ site.data.params.name }}</div>
-        <div class="reg_slide_subtitle">Our hostel is located in the capital’s hippest and trendiest district.</div>
+        <div class="reg_slide_subtitle">{{ site.data.params.haslo }}</div>
 
     </div>
     <!-- Slider Texts End -->
@@ -14,6 +14,6 @@
     <!-- Slide Down -->
     <a class="reg_scroll_down reg_go" href="#reg_content">
         <b></b>
-        Scroll
+        Прокрути
     </a>
 </div>
