--- a/css/regal_style.css
+++ b/css/regal_style.css
@@ -2240,7 +2240,7 @@ header {
 		.reg_slide_title {
 			font:900 80px Raleway, Arial;
 			line-height: 1.0625;
-			margin-bottom: 30px;
+			margin-bottom: 20px;
 			display: inline-block;
 			position: relative;
 		}
@@ -2253,8 +2253,8 @@ header {
 			    position: absolute;
 			    width: 100%;
 			    z-index: -1;
-			    background: #fff;
-			    opacity: 0.2;
+			    background: yellow;
+			    opacity: 0.8;
 			}
 
 		.reg_slide_title_great {
