--- a/css/regal_style.css
+++ b/css/regal_style.css
@@ -2255,6 +2255,7 @@ header {
 			    z-index: -1;
 			    background: yellow;
 			    opacity: 0.8;
+				color: yellow;
 			}
 
 		.reg_slide_title_great {
