--- a/_includes/booking.html
+++ b/_includes/booking.html
@@ -1,13 +1,13 @@
 <!-- Booking -->
 <div id="reg_slider_review" data-0="@class:noactive" data-200="@class:active">
     <div class="row">
-        <div class="col-md-3 col-sm-12 col-xs-12">
+        <div class="col-md-2 col-sm-12 col-xs-12">
                      <span class="reg_subtitle">
                         <span class="reg_book_close"><span></span><span></span></span>
                         Замовити
                     </span>
         </div>
-        <div class="col-md-9 col-sm-12 col-xs-12">
+        <div class="col-md-10 col-sm-12 col-xs-12">
             <div class="reg_slider_review_form">
                 <div class="row">
 
@@ -19,10 +19,10 @@
                         <div class="col-md-2 reg_book_item">
                             <input type="text" value="" class="form-control date_picker" name="departure" required placeholder="Вибуття">
                         </div>
-                        <div class="col-md-2 reg_book_item">
-                            <input type="text" value="" class="form-control" name="name" required placeholder="Ім'я та прізвище">
+                        <div class="col-md-3 reg_book_item">
+                            <input type="text" value="" class="form-control" name="name" required placeholder="Ім'я">
                         </div>
-                        <div class="col-md-2 reg_book_item">
+                        <div class="col-md-3 reg_book_item">
                             <input type="text" value="" class="form-control" name="phone" required placeholder="Телефон>
                         </div>
                         <div class="col-md-2 reg_book_item">
