--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
   <script src="js/regal_library.js"></script>
   <!-- Theme JS -->
   <script src="js/regal_script.js"></script>
+  <script src="js/validation-uk.js"></script>
 
 
 </body>
