--- a/_includes/booking.html
+++ b/_includes/booking.html
@@ -14,7 +14,8 @@
                     <!-- Form -->
                     <form class="reg_form" action="https://formspree.io/greenhostel@ukr.net" method="POST">
                         <div class="col-md-2 reg_book_item">
-                            <input type="text" value="" class="form-control date_picker" name="arrival" required placeholder="Прибуття">
+                            <input type="text" value="" class="form-control date_picker" name="arrival" required placeholder="Заїзд"
+                                   data-msg-required="Виберіть дату заїзду">
                         </div>
                         <div class="col-md-2 reg_book_item">
                             <input type="text" value="" class="form-control date_picker" name="departure" required placeholder="Вибуття">
