--- a/_includes/about.html
+++ b/_includes/about.html
@@ -19,7 +19,7 @@
                 <div class="reg_simple_block text-left">
                     <h2>{{ site.data.about.context.title.line1 }}</h2>
                     <h3>{{ site.data.about.context.title.line2 }}</h3>
-                    {% for p in site.data.about.context.text.rows %>
+                    {% for p in site.data.about.context.text.rows %}
                     <p>{{ p }}</p>
                     {% endfor %}
                     <h3>{{ site.data.about.context.text.signature.title }}</h3>
