--- a/_includes/booking.html
+++ b/_includes/booking.html
@@ -24,7 +24,7 @@
                             <input type="text" value="" class="form-control" name="name" required placeholder="Ім'я">
                         </div>
                         <div class="col-md-3 reg_book_item">
-                            <input type="text" value="" class="form-control" name="phone" required placeholder="Телефон>
+                            <input type="text" value="" class="form-control" name="phone" required placeholder="Телефон">
                         </div>
                         <div class="col-md-2 reg_book_item">
                             <select class="form-control" id="room" name="room">
