add font Raleway

--- a/css/regal_style.css
+++ b/css/regal_style.css
@@ -85,7 +85,10 @@
 ======================================
 */
 
-
+@font-face {
+	font-family: Raleway; /* Имя шрифта */
+	src: url(/fonts/Raleway-Regular.ttf); /* Путь к файлу со шрифтом */
+}
 /*===============================================*/
 /* 01. Main Styles                               */
 /*===============================================*/
