--- a/_includes/rooms.html
+++ b/_includes/rooms.html
@@ -29,6 +29,7 @@
                     <h3>Від <span class="reg_underline_title">&#8372;{{room.price}}</span> за ліжко за ніч </h3>
                 </div>
             </div>
+            {% endfor %}
             <!-- item end -->
 
         </div>
