--- a/_includes/rooms.html
+++ b/_includes/rooms.html
@@ -22,7 +22,7 @@
                     <h2>{{room.title}} <a href="#reg_page" class="reg_go"><i class="ti ti-tag"></i><b>Зарезервувати</b></a></h2>
                     <h4>{{room.description}}</h4>
                     <ul>
-                        {% for option in room.options %>
+                        {% for option in room.options %}
                         <li>{{option}}</li>
                         {% endfor %}
                     </ul>
