--- a/_includes/rooms.html
+++ b/_includes/rooms.html
@@ -6,7 +6,7 @@
         <div class="row row_no_pd reg_auto_height">
 
             <!-- item -->
-            {% for room in site.data.list.rooms %}
+            {% for room in site.data.rooms.list %}
             <div class="col-md-6" >
                 <div class="reg_single_carousel reg_rooms_carousel reg_wht_txt">
                     {% for image in room.images %}
