--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,7 +1,7 @@
 <!-- section -->
 <section class="reg_section" id="services">
     <div class="container text-center">
-        <h2>Services</h2><br>
+        <h2>{{ site.data.services.title }}</h2><br>
 
         <!-- icon boxes -->
         <div class="reg_icon_boxes row">
