--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -34,7 +34,7 @@
 
         <!-- Social Btns -->
         <div class="reg_menu_cont_social">
-            Підписатись
+            Приєднуйся
             <a href="#" class="ti ti-facebook"></a>
             <a href="#" class="ti ti-twitter"></a>
             <a href="#" class="ti ti-instagram"></a>
