--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,5 +1,5 @@
 <!-- section -->
-<section class="reg_section reg_image_bck" data-color="#f2f2f2" id="map">
+<section class="reg_section reg_image_bck" data-color="#f2f2f2" id="contacts">
     <div class="container text-center">
         <h2>Знайди Нас на Карті</h2><br>
 
