--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -25,7 +25,7 @@
         <ul>
             {% for item in site.data.menu.items %}
             <li>
-                <a href="{{ item.link }}">
+                <a href="#{{ item.link }}">
                     <span>{{ item.title }}</span>
                 </a>
             </li>
