--- a/_includes/map.html
+++ b/_includes/map.html
@@ -5,7 +5,7 @@
 
         <!-- google map -->
         <div class="reg_map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d38852.53604898047!2d13.352403003182175!3d52.51020916491075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e373f035901%3A0x042120465b5e3b70!2sBerlin%2C+Germany!5e0!3m2!1sen!2sru!4v1465312283068" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1286.7467011583765!2d24.037627771965212!3d49.833185996357514!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add42afd71495%3A0x3688c0a10a8d6bc8!2z0LLRg9C70LjRhtGPINCX0LXQu9C10L3QsCwgMjAsINCb0YzQstGW0LIsINCb0YzQstGW0LLRgdGM0LrQsCDQvtCx0LvQsNGB0YLRjA!5e0!3m2!1suk!2sua!4v1488742020408" allowfullscreen></iframe>
         </div>
         <!-- google map end -->
 
