--- a/_includes/offers.html
+++ b/_includes/offers.html
@@ -17,9 +17,9 @@
                         <li>{{option}}</li>
                         {% endfor %}
                     </ul>
-                    <span class="btn">Більше інформації та Резервування</span>
-                    <a href="#" class="reg_room_block reg_image_bck" data-image="/images/{{offer.image}}">
-                        <b class="btn">Більше та Резервування</b>
+                    <span class="btn">Більше взнати та Резервувати</span>
+                    <a href="#reg_page" class="reg_room_block reg_image_bck" data-image="/images/{{offer.image}}">
+                        <b class="btn">Більше взнати та Резервувати</b>
                     </a>
                 </div>
             </div>
