--- a/_includes/offers.html
+++ b/_includes/offers.html
@@ -18,7 +18,7 @@
                         {% endfor %}
                     </ul>
                     <span class="btn">Більше взнати та Резервувати</span>
-                    <a href="#reg_page" class="reg_room_block reg_image_bck" data-image="/images/{{offer.image}}">
+                    <a href="#reg_page" class="reg_room_block reg_image_bck reg_go" data-image="/images/{{offer.image}}">
                         <b class="btn">Більше взнати та Резервувати</b>
                     </a>
                 </div>
