--- a/_includes/rooms.html
+++ b/_includes/rooms.html
@@ -30,7 +30,7 @@
                         <li>{{option}}</li>
                         {% endfor %}
                     </ul>
-                    <h3>Від <span class="reg_underline_title">&#8372;{{room.price}}</span> за ліжко за ніч </h3>
+                    <h3><span class="reg_underline_title">&#8372;{{room.price.amount}}</span> {{room.price.text}}</h3>
                 </div>
             </div>
             {% endfor %}
