add text offers

--- a/_includes/offers.html
+++ b/_includes/offers.html
@@ -7,8 +7,8 @@
 
             <!-- item -->
             {% for offer in site.data.offers.list %}
-            <div class="col-md-4 reg_special_offers_item" style="height: 275px">
-                <div class="reg_special_offers reg_image_bck reg_wht_txt text-left" data-color="#292929">
+            <div class="col-md-4 reg_special_offers_item">
+                <div class="reg_special_offers reg_image_bck reg_wht_txt text-left" data-color="#292929" style="height: 275px">
                     <div class="reg_special_offers_best">{{offer.haslo}}</div>
                     <h3>{{offer.title}}</h3>
                     <h4>{{offer.description}}</h4>
