add text offers

--- a/_includes/offers.html
+++ b/_includes/offers.html
@@ -17,7 +17,7 @@
                         <li>{{option}}</li>
                         {% endfor %}
                     </ul>
-                    <span class="btn" style="position: relative; bottom: 20px">Більше взнати та Резервувати</span>
+                    <span class="btn">Більше взнати та Резервувати</span>
                     <a href="#reg_page" class="reg_room_block reg_image_bck reg_go" data-image="/images/{{offer.image}}">
                         <b class="btn">Більше взнати та Резервувати</b>
                     </a>
