update booking rooms types

--- a/_includes/booking.html
+++ b/_includes/booking.html
@@ -28,9 +28,9 @@
                         </div>
                         <div class="col-md-2 reg_book_item">
                             <select class="form-control" id="room" name="room">
-                                <option>Mixed dorms</option>
-                                <option>Girls-only dorms</option>
-                                <option>Private rooms</option>
+                                <option>Змішана кімната</option>
+                                <option>Кімната для дівчат</option>
+                                <option>Апартаменти</option>
                             </select>
                         </div>
                         <div class="col-md-2 reg_book_item">
